Fix to footer on IE7.
Footer wasn't aligning with the page on IE7.

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -528,7 +528,6 @@ div.page {
 }
 
 div.padding {
-	float: left;
 	height: 300px;
 	width: 100%;
 }
